--- a/index.html
+++ b/index.html
@@ -18,5 +18,34 @@
         </video>
         <button>Play/Pause</button>
     </main>
+
+    <script>
+        const video = document.querySelector("video");
+        const button = document.querySelector("button");
+
+        function MediaPlayer(config) {
+            this.media = config.el;
+        }
+
+        MediaPlayer.prototype.play = function() {
+            this.media.play();
+        }
+
+        MediaPlayer.prototype.pause = function() {
+            this.media.pause();
+        }
+
+        MediaPlayer.prototype.toggleButton = function() {
+            if (this.media.paused) {
+                this.play();
+            }else {
+                this.pause();
+            }
+        }
+
+        const player = new MediaPlayer({ el: video });
+
+        button.onclick = () => player.toggleButton();
+    </script>
 </body>
 </html>
