--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         <video class="movie">
             <source src="./assets/BigBuckBunny_512kb.mp4" />
         </video>
-        <button>Play/Pause</button>
+        <button class="btnPlay">Play/Pause</button>
+        <button class="btnMute">Mute/UnMute</button>
     </main>
 
     <script type="module" src="./assets/index.js"></script>
