--- a/index.html
+++ b/index.html
@@ -260,6 +260,6 @@
 
     </main>
 
-    <script type="module" src="./assets/index.js"></script>
+    <script type="module" src="./assets/index.ts"></script>
 </body>
 </html>
